--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
     "\n",
     "驾驶代理程序获得的奖励是2.92\n",
     "\n",
-    "智能车的action一直都是None，当红灯时，智能车会受到奖励；当绿灯直行时，智能车会受到惩罚"
+    "Agent properly idled at a red light会获得奖励，但如果是连续的红灯，会受到惩罚；Agent idled at a green light with no oncoming traffic会受到惩罚，但是Agent idled at a green light with oncoming traffic会受到奖励"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "\n",
     "'inputs'对学习安全性的相关性最高，因为这些特征描述了需要学习的环境中的交通情况，比如交通灯是red or green，左侧车辆的是forward, left or right，右侧车辆是forward, left or right，以及交叉方向的车辆目的方向，根据这些交通情况的描述来选择最安全的ation\n",
     "\n",
-    "'deadline'其实是一种不稳定的特征，比如：在某个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，没有办法在规定的时间内到达目的地。但是在另外一个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内无法到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，但也是可以在规定的时间内到达目的地的。所以这个特征不具有一般性，会影响智能车的训练的准确性。同时deadline会使状态空间变得很大，这个取决于智能车的起始位置，最坏的情况是智能车的起始位置选择在距离目的地最远的地方。"
+    "'deadline'其实是一种不稳定的特征，比如：在某个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，没有办法在规定的时间内到达目的地。但是在另外一个状态，选择action A，'deadline'比较大，但是不堵车，可以在规定的时间内无法到达目的地；如果选择action B，'deadline'是比较小，但是会堵车，但也是可以在规定的时间内到达目的地的。所以这个特征不具有一般性，会影响智能车的训练的准确性。同时deadline会使状态空间变得很大，增加训练次数，结果不容易达到收敛，这个取决于智能车的起始位置，最坏的情况是智能车的起始位置选择在距离目的地最远的地方。"
    ]
   },
   {
@@ -457,6 +457,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -486,7 +495,9 @@
     "\n",
     "我认为Q-Learning学习器的结果表明了你的驾驶代理程序成功地学习了一个合适的策略\n",
     "\n",
-    "满意"
+    "满意\n",
+    "\n",
+    "epsilon的初始值是1.0，探索因子epsilon是用来决定小车的动作的选择是随机选择还是根据Q-table选择奖励最大的动作。在choose_action方法中，每次生成一个随机数，如果随机数小于epsilon，则随机选择；如果随机数大于epsilon，则根据Q-table选择奖励最大的动作。"
    ]
   },
   {
@@ -511,6 +522,9 @@
    "metadata": {},
    "source": [
     "**回答：** \n",
+    "\n",
+    "由于未来奖励在这个Q-Learning算法中无效应，所以在本项目中最优策略是指在某个状态下，选择奖励最大的动作a\n",
+    "\n",
     "(waypoint, inputs['light'], inputs['oncoming'], inputs['left'], inputs['right'])\n",
     "最优策略例子：\n",
     "\n",
